Work with flexible appEngine

--- a/package.json
+++ b/package.json
@@ -3,22 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/debug-agent": "^4.0.1",
     "@google-cloud/speech": "^3.2.3",
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
+    "google-auth-library": "^5.2.0",
     "opus-recorder": "^6.1.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "ws": "^7.1.1"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server.js",
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test",
+    "react-eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
