--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@google-cloud/debug-agent": "^4.0.1",
+    "@google-cloud/datastore": "^4.2.0",
     "@google-cloud/speech": "^3.2.3",
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "google-auth-library": "^5.2.0",
+    "moment": "^2.24.0",
     "opus-recorder": "^6.1.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "sqlite3": "^4.1.0",
     "ws": "^7.1.1"
   },
   "proxy": "http://localhost:8080",
@@ -38,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
