--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "@google-cloud/datastore": "^4.5.2",
     "@google-cloud/speech": "^3.4.0",
     "bootstrap": "^4.4.1",
+    "crc-32": "^1.2.0",
+    "dateformat": "^3.0.3",
     "express": "^4.17.1",
     "google-auth-library": "^5.5.1",
-    "moment": "^2.24.0",
     "opus-recorder": "^6.1.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.3",
     "sqlite3": "^4.1.0",
     "ws": "^7.2.0"
   },
