--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 Speech-8dd6e8fb8a6d.json
+speech_accessKeys.csv
 *.iml
 .idea/
 node_modules/
@@ -8,3 +9,6 @@ data.db
 .DS_Store
 rsync.txt
 credentials/
+audio
+output.wav
+src/App copy.jsx
