--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@google-cloud/datastore": "^4.5.2",
-    "@google-cloud/speech": "^3.4.0",
-    "bootstrap": "^4.4.1",
+    "@google-cloud/datastore": "^6.5.0",
+    "@google-cloud/speech": "^4.8.0",
+    "bootstrap": "^4.6.0",
     "crc-32": "^1.2.0",
     "dateformat": "^3.0.3",
     "express": "^4.17.1",
-    "google-auth-library": "^5.5.1",
-    "opus-recorder": "^6.1.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
-    "sqlite3": "^4.1.0",
-    "ws": "^7.2.0"
+    "google-auth-library": "^7.9.1",
+    "opus-recorder": "^6.2.0",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
+    "sqlite3": "^4.2.0",
+    "ws": "^7.4.6"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
