--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "private": true,
   "dependencies": {
     "@google-cloud/datastore": "^6.5.0",
-    "@google-cloud/speech": "^4.8.0",
+    "@google-cloud/speech": "^4.9.0",
     "bootstrap": "^4.6.0",
     "crc-32": "^1.2.0",
     "dateformat": "^3.0.3",
     "express": "^4.17.1",
-    "google-auth-library": "^7.9.1",
+    "google-auth-library": "^7.9.2",
+    "npm-check-updates": "^11.8.5",
     "opus-recorder": "^6.2.0",
     "react": "^16.14.0",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "sqlite3": "^4.2.0",
-    "ws": "^7.4.6"
+    "ws": "^7.5.5"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
